@@ -1,6 +1,6 @@
 <?php
 
-  ZMLayout::instance()->setRightColBoxes(array('search.php', 'categories.php', 'information.php'));
+  ZMTemplateManager::instance()->setRightColBoxes(array('search.php', 'categories.php', 'information.php'));
 
   ZMSettings::set('isUseCategoryPage', false);
   ZMSettings::set('resultListProductFilter', '');
