@@ -1,7 +1,7 @@
 <?php
 
-  ZMLayout::instance()->setLeftColBoxes(array('categories.php', 'featured.php', 'information.php'));
-  ZMLayout::instance()->setRightColBoxes(array('search.php', 'manufacturers.php', 'ezpages.php'));
+  ZMTemplateManager::instance()->setLeftColBoxes(array('categories.php', 'featured.php', 'information.php'));
+  ZMTemplateManager::instance()->setRightColBoxes(array('search.php', 'manufacturers.php', 'ezpages.php'));
 
   ZMSettings::set('isUseCategoryPage', false);
   ZMSettings::set('resultListProductFilter', '');
